FuzzBug api
